--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+>
 <head>
+    <title>POL-Innsyn-TP</title>
     <meta charset="UTF-8">
-    <title>Title</title>
 </head>
 <body>
 <div style="float: right" th:fragment="logout" sec:authorize="isAuthenticated()">
@@ -12,7 +16,7 @@
     <div style="float:none">&nbsp;</div>
     <div style="float:right">
         <form action="#" th:action="@{/logout}" method="post">
-            <input type="submit" value="Logout" />
+            <input type="submit" value="Logout"/>
         </form>
     </div>
 </div>
