--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,22 +3,46 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
->
+      xmlns="http://www.w3.org/1999/html">
 <head>
     <title>POL-Innsyn-TP</title>
     <meta charset="UTF-8">
 </head>
 <body>
-<div style="float: right" th:fragment="logout" sec:authorize="isAuthenticated()">
+<div style="float: left" th:fragment="logout" sec:authorize="isAuthenticated()">
     <div style="float:left">
         <span style="font-weight:bold">User: </span><span sec:authentication="name"></span>
     </div>
-    <div style="float:none">&nbsp;</div>
-    <div style="float:right">
+    <div>&nbsp;</div>
+    <div style="float:left">
         <form action="#" th:action="@{/logout}" method="post">
             <input type="submit" value="Logout"/>
         </form>
     </div>
 </div>
+<br>
+<br>
+<div style="display: table; margin: 0 auto">
+    <form method="get" action="javascript:download(fnr.value)">
+        <label><b>Innsyn:</b><br>
+            <input type="text" id="fnr" name="fnr"
+                   pattern="\d{11}"
+                   title="11-digit number. Ex: 12345678910" placeholder="Fødselsnummer"
+                   required>
+        </label>
+        <input type="submit" value="Download">
+    </form>
+    <br>
+    <a id="dlink"></a>
+</div>
+<script>
+    function download(fnr) {
+        let link = document.getElementById('dlink');
+        link.href = 'api/innsyn/' + fnr
+        link.download = fnr + '.xlsx'
+        link.innerText = fnr + '.xlsx'
+        link.dispatchEvent(new MouseEvent('click'));
+    }
+</script>
 </body>
 </html>
