--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       xmlns="http://www.w3.org/1999/html">
 <head>
     <title>POL-Innsyn-TP</title>
     <meta charset="UTF-8">
 </head>
 <body>
-<div style="float: left" th:fragment="logout" sec:authorize="isAuthenticated()">
-    <div style="float:left">
-        <span style="font-weight:bold">User: </span><span sec:authentication="name"></span>
-    </div>
-    <div>&nbsp;</div>
-    <div style="float:left">
-        <form action="#" th:action="@{/logout}" method="post">
-            <input type="submit" value="Logout"/>
-        </form>
+<div class="container authenticated">
+    Logged in as: <span id="user"></span>
+    <div>
+        <button onclick="logout()" class="btn btn-primary">Logout</button>
     </div>
 </div>
 <br>
@@ -35,7 +28,21 @@
     <br>
     <a id="dlink"></a>
 </div>
+<script type="text/javascript">
+    $.get("/user", function(data) {
+        $("#user").html(data.name);
+        $(".authenticated").show()
+    });
+</script>
 <script>
+    function logout() {
+        $.post("/logout", function() {
+            $("#user").html('');
+            $(".unauthenticated").show();
+            $(".authenticated").hide();
+        })
+        return true;
+    }
     function download(fnr) {
         let link = document.getElementById('dlink');
         link.href = 'api/innsyn/' + fnr
