Remove reliance on external xmlns.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,11 +36,7 @@
 </script>
 <script>
     function logout() {
-        $.post("/logout", function() {
-            $("#user").html('');
-            $(".unauthenticated").show();
-            $(".authenticated").hide();
-        })
+        $.post("/logout")
         return true;
     }
     function download(fnr) {
