--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,51 +1,47 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns="http://www.w3.org/1999/html">
+      xmlns="http://www.w3.org/1999/html"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>POL-Innsyn-TP</title>
     <meta charset="UTF-8">
 </head>
 <body>
 <div class="container authenticated">
-    Logged in as: <span id="user"></span>
-    <div>
-        <button onclick="logout()" class="btn btn-primary">Logout</button>
-    </div>
+    <form action="/logout">
+        <label>User:
+            <span th:text="${user}"></span>
+        </label>
+        <div>
+            <button type="submit" class="btn btn-primary">Logout</button>
+        </div>
+    </form>
 </div>
 <br>
 <br>
 <div style="display: table; margin: 0 auto">
     <form method="get" action="javascript:download(fnr.value)">
-        <label><b>Innsyn:</b><br>
+        <label><b>Innsyn:</b>
+            <br>
             <input type="text" id="fnr" name="fnr"
-                   pattern="\d{11}"
                    title="11-digit number. Ex: 12345678910" placeholder="Fødselsnummer"
-                   required>
+                   pattern="\d{11}" required>
+            <input type="submit" value="Download">
         </label>
-        <input type="submit" value="Download">
     </form>
     <br>
-    <a id="dlink"></a>
+    <a id="dlink">
+        <script>
+            function download(fnr) {
+                let link = document.getElementById('dlink');
+                link.href = 'api/innsyn/' + fnr
+                link.download = fnr + '.xlsx'
+                link.innerText = fnr + '.xlsx'
+                link.dispatchEvent(new MouseEvent('click'));
+            }
+        </script>
+    </a>
 </div>
-<script type="text/javascript">
-    $.get("/user", function(data) {
-        $("#user").html(data.name);
-        $(".authenticated").show()
-    });
-</script>
-<script>
-    function logout() {
-        $.post("/logout")
-        return true;
-    }
-    function download(fnr) {
-        let link = document.getElementById('dlink');
-        link.href = 'api/innsyn/' + fnr
-        link.download = fnr + '.xlsx'
-        link.innerText = fnr + '.xlsx'
-        link.dispatchEvent(new MouseEvent('click'));
-    }
-</script>
 </body>
 </html>
